# Hadoop_bigdata_analysis

./: .gitignore  Makefile  pyproject.toml  readme.md
datasets/: __init__.py  __main__.py  validate.py
datasets/extract/: __main__.py
deploy/k8s/: Dockerfile  Makefile  download.sh  value-1node.yaml  value-3node.yaml
output/DBLP/: mahout_run.sh  preprocessing.sh  view.sh
output/forest/: mahout_run.sh  preprocessing.sh  view.sh
script/: data_preprocessing.sh  data_put2hdfs.sh  init_project.sh  kube_cp.sh  split_DBLP.sh  start_docker_service.sh  start_hadoop_service.sh  unzip.sh
